header and body alignment fixing

--- a/src/Components/Header/NavBar.css
+++ b/src/Components/Header/NavBar.css
@@ -16,7 +16,7 @@ header{
     justify-content: space-between;
 }
 .logo{
-    width: 200px;   
+    width: 15rem;   
 }
 .nav-link{
     color: white;
@@ -31,4 +31,18 @@ header{
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 15px;
+}
+.search-bar{
+    border: none;
+    border-radius: 15px;
+    height: 2rem;
+    width: 22rem;
+    padding: 0.5rem 1rem;
+}
+.search-btn{
+    background-color: violet;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 15px;
+    margin-left: 0.5rem;
 }
